# Simple-Animation-Blender

./: .gitignore  Readme.md  meson.build  srcAssembler.sh
Assets/: Low Poly Character.glb  fragmentShader.spv  shader.frag  shader.vert  vertexShader.spv
include/simple-animation-blender/: Animator.h  Application.h  GUI.h  Logger.h  Mesh.h
src/: Animator.cpp  Application.cpp  GUI.cpp  Logger.cpp  Mesh.cpp  main.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
